--- a/components/HeaderComponent.module.scss
+++ b/components/HeaderComponent.module.scss
@@ -393,13 +393,13 @@
 
   &__row {
     position: absolute;
-    top: 1.5px;
+    top: 1px;
     width: 20px;
     height: 20px;
 
     &__top {
       position: absolute;
-      top: 2px;
+      top: 1px;
       width: 20px;
       height: 20px;
       transform: rotate(180deg);
